--- a/css/reset.sass
+++ b/css/reset.sass
@@ -2,7 +2,10 @@
 
     /* Insu Song reset style 2023 version*/
 
-    html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, 
+    /* h1 magin 0 fullpage sliide error so i except h1 from reset */
+
+    html, body, span, object, iframe, 
+    // h2, h3, h4, h5, h6, p, 
     blockquote, pre, a, address, em, img, strong, var, b, i,dl, dt, dd, 
     ol, ul, li, fieldset, form, label, legend, article, aside, figure, 
     figcaption, footer, header, hgroup, menu, nav, section, audio, video 
@@ -34,6 +37,7 @@
 
     body 
         line-height: 1
+        height: 100%
 
     ol, ul 
         list-style: none
